# tucant

./: .dockerignore  .env  .eslintcache  .gitignore  .gitlab-ci.yml  .gitmodules  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.nix  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile-postgres  README.md  SECURITY.md  bacon.toml  base64.txt  config.toml.test  deny.toml  deps.json  diesel.toml  docker-compose.yml  env.sample  explain.sql  exploit.html  flake.nix  foo.txt  module-handbook.js  module-handbook.py  package-lock.json  package.json  pre-commit.sh  rome.json  rust-toolchain.toml  rustfmt.toml  shell.nix  tampermonkey.js  tucant.code-workspace
.reuse/: dep5
backend-rust/: .env  .env.sample  Cargo.toml  Dockerfile-opensearch  Dockerfile-postgres  diesel.toml  myfile.ts
backend-rust-derive/: Cargo.toml
backend-rust-derive-lib/: Cargo.toml
backend-rust-derive-lib/src/: lib.rs
backend-rust-derive/src/: lib.rs
backend-rust-derive/tests/: test.rs  test_1.rs
backend-rust/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
backend-rust/migrations/2022-09-10-005633_initial/: down.sql  up.sql
backend-rust/src/: lib.rs  models.rs  mongodb.rs  schema.rs  tucan.rs  tucan_user.rs  typescript.rs  typescriptable.rs  url.rs
backend-rust/tests/: test.rs
core/: .fuse_hidden00013d9800000126  Cargo.toml  diesel.toml  test.db
core/migrations/2022-09-10-005633_initial/: up.sql
core/src/: lib.rs  models.rs  schema.patch  schema.rs  tucan.rs  tucan_user.rs  url.rs
debug-adapter-protocol/: Cargo.toml  b  build.rs  test.rs
debug-adapter-protocol-macro-impl/: Cargo.toml
debug-adapter-protocol-macro-impl/src/: debugAdapterProtocol.rs  debug_adapter_protocol.rs  json_parser.rs  json_schema.rs  json_schema_codegen.rs  lib.rs  utils.rs
debug-adapter-protocol/src/: debugAdapterProtocol.rs  debug_adapter_protocol.rs  lib.rs  main.rs  test.rs
debug_adapter_protocol/: Cargo.toml  build.rs
debug_adapter_protocol_macro_impl/: Cargo.toml
debug_adapter_protocol_macro_impl/src/: debug_adapter_protocol.rs  json_schema.rs  utils.rs
frontend-yew/: Cargo.toml  LICENSE-MIT  README.md  index.html
frontend-yew/src/: app.rs  main.rs  module.rs
json-rpc-server/: Cargo.toml
json-rpc-server/src/: lib.rs
json_rpc_server/: Cargo.toml
out-dir-include/: Cargo.toml
out_dir_include/: Cargo.toml
out_dir_include/src/: lib.rs
tucan-connector/: .gitignore  Cargo.toml
tucan-connector/src/: externalpages.rs  html_handler.rs  lib.rs  login.rs  main.rs  mlsstart.rs  root.rs  startpage_dispatch.rs  streaming_http_parser.rs
tucan-connector/src/common/: head.rs
tucan-connector/src/coursedetails/: index.rs
tucan-connector/src/externalpages/: studveranst.rs  welcome.rs
tucan-connector/src/mlsstart/: start_page.rs
tucan-connector/src/moduledetails/: index.rs
tucan-connector/src/registration/: index.rs
tucan-connector/src/startpage_dispatch/: after_login.rs  one.rs
tucan-connector/tests/: login.rs  moduledetails.rs  navigation.rs
tucan-injector/: .gitignore  Cargo.toml  bacon.toml  index.html  package-lock.json  package.json  run.sh  vite.config.js  webpack.config.js
tucan-injector/src/: lib.js  lib.rs  main.js
tucant-api/: Cargo.toml  bacon.toml
tucant-api/src/: lib.rs  main.rs
tucant-extension/: .gitignore  Cargo.toml  README.md  background.js  background.ts  bootstrap.bundle.min.js  bootstrap.css  bootstrap.css.map  bootstrap.scss  content-script.js  content-script.ts  context-menu.js  custom-ui.js  eslint.config.js  eslint.config.mjs  fix-session-id-in-url.js  fix-session-id-in-url.ts  helper.js  index.html  index.js  jsconfig.json  manifest.json  mobile-changes.css  mobile.css  mobile.js  open-in-tucan.js  open-in-tucan.ts  options.html  options.js  options.ts  package-lock.json  package.json  popup.html  popup.js  popup.ts  recover-tabs.js  rules.json  run.sh  sw.js  tsconfig.json  (+4 more)
tucant-extension/_metadata/generated_indexed_rulesets/: _ruleset1
tucant-extension/src/: lib.rs
tucant-extension/typings/: fix.d.ts
tucant-language-server/: Cargo.toml  build.rs
tucant-language-server-derive/: Cargo.toml
tucant-language-server-derive-internal/: Cargo.toml
tucant-language-server-derive-internal/src/: lib.rs  schema.rs  type_converter.rs
tucant-language-server-derive-output/: Cargo.toml  build.rs  build.rs.old
tucant-language-server-derive-output/src/: lib.rs
tucant-language-server-derive/src/: lib.rs
tucant-language-server/fuzz/: Cargo.toml
tucant-language-server/fuzz/fuzz_targets/: fuzz_target_1.rs
tucant-language-server/fuzz_afl/: Cargo.toml
tucant-language-server/fuzz_afl/fuzz_targets/: fuzz_target_1.rs
tucant-language-server/fuzz_common/src/: lib.rs
tucant-language-server/fuzz_libfuzzer/: Cargo.toml
tucant-language-server/fuzz_libfuzzer/fuzz_targets/: fuzz_target_1.rs
tucant-language-server/src/: evaluator.rs  idea.rs  lib.rs  main.rs  parser.rs  parsing.rs
tucant-language-server/src/parsing/: mod.rs  parser.rs  parsing.rs  string.rs
tucant-language-server/src/server/: main.rs
tucant-language-server/tests/: test_initialize.rs
tucant-types/: Cargo.toml
tucant-types/src/: coursedetails.rs  lib.rs  moduledetails.rs  registration.rs
tucant-yew/: Cargo.toml  Trunk.toml  fixup.sh  index.html
tucant-yew/src/: api_server.rs  common.rs  course_details.rs  direct.rs  exam_results.rs  lib.rs  main.rs  module_details.rs  my_documents.rs  my_exams.rs  navbar.rs  navbar_logged_out.rs  registration.rs  tauri.rs
tucant_backend/: Cargo.toml  Dockerfile-postgres  build.rs
tucant_derive/: Cargo.toml
tucant_derive_lib/: Cargo.toml
tucant_derive_lib/src/: lib.rs
tucant_language_server/: Cargo.toml
tucant_language_server/fuzz_afl/fuzz_targets/: fuzz_target_1.rs
tucant_language_server/fuzz_common/: Cargo.toml
tucant_language_server/tests/: test_initialize.json
tucant_language_server_derive_internal/: Cargo.toml
tucant_language_server_derive_internal/src/: lib.rs  metaModel.json
tucant_language_server_derive_output/: Cargo.toml  build.rs
tucant_language_server_derive_output/src/: lib.rs
(+499 files in other folders)
