[workspace]
resolver = "2"
members = [
    "tucan-connector",
    "html-extractor",
    "key-value-database",
    "tucant-yew",
    "tucant-tauri",
    "tucant-api",
    "tucant-types",
]

[workspace.package]
license = "AGPL-3.0-or-later"
edition = "2021"
version = "0.1.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[profile.profiling]
inherits = "release"
lto = true
opt-level = 'z'
panic = "abort"
codegen-units = 1

[profile.release]
lto = true
opt-level = 'z'
panic = "abort"
codegen-units = 1