[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/tucant-tauri"]

[workspace.package]
license = "AGPL-3.0-or-later"
edition = "2024"
version = "0.1.2"
rust-version = "1.85.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
#cargo = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
missing_errors_doc = "allow"

[profile.release]
debug = true
