[workspace]
members = [
    "./crates/*"
]
edition = "2024"
resolver = "3"
version = "0.1.0"

[profile.wasm-release]
inherits = "release"
#debug = "line-tables-only"
lto = true

[profile.wasm-dev]
inherits = "dev"

[patch.crates-io]
sqlite-wasm-rs = { git = "https://github.com/mohe2015/sqlite-wasm-rs.git", branch = "sqlite3_os_end" }

# so brotli compression is faster
[profile.wasm-dev.package."*"]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16