[package]
name = "tucant_derive"
version = "0.1.0"
edition = "2021"
description = "A nicer, faster and more featureful frontend to TUCaN"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mohe2015/tucant"
readme = "README.md"
keywords = ["tucan"]
categories = ["accessibility", "api-bindings", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.1"
heck = "0.4"
