[package]
name = "tucant_derive"
version = "0.1.0"
edition = "2021"
description = "A nicer, faster and more featureful frontend to TUCaN"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mohe2015/tucant"
readme = "README.md"
keywords = ["tucan"]
categories = ["accessibility", "api-bindings", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn          = { default-features = false, features = [ "parsing", "proc-macro", "derive", "printing" ], version = "1" }
quote        = { default-features = false, version = "1" }
proc-macro2  = { default-features = false, version = "1" }
prettyplease = { default-features = false, version = "0.1" }
heck         = { default-features = false, version = "0.4" }
