# SPDX-FileCopyrightText: The tucant Contributors
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "tucant"
version = "0.1.0"
edition = "2021"
authors = [ "Moritz Hedtke <Moritz.Hedtke@t-online.de>" ]
description = "Test"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["cookies"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
html5ever = { version = "0.26", optional = true }
scraper = { version = "0.13", optional = true }
ego-tree = { version = "0.6", optional = true }
futures = { version = "0.3", optional = true }
diesel = { version = "2", features = ["postgres", "chrono"], optional = true }
diesel-async = { version = "0.1", features = ["postgres", "deadpool"], optional = true }
dotenvy = { version = "0.15", optional = true }
anyhow = { version = "1", features = ["backtrace"], optional = true }
regex = { version = "1", optional = true}
axum = { version = "0.6", features = ["macros"] }
axum-extra = { version = "0.4", features = ["cookie", "cookie-private"] }
tower-http = { version = "0.3", features = ["cors","trace","compression-br","compression-deflate","compression-gzip"] }
futures-util = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = {version = "1", optional = true }
async-stream = { git = "https://github.com/SabrinaJewson/async-stream.rs", branch = "no-proc-macro", optional = true }
chrono = { version = "0.4", features = ["serde"] }
deadpool = { version = "0.9", optional = true }
url = { version = "2", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.9", optional = true }
derive_more = { version = "0.99", optional = true }
itertools = { version = "0.10", optional = true }
either = { version = "1", optional = true }
once_cell = { version = "1", optional = true }
diesel_full_text_search = { git = "https://github.com/mohe2015/diesel_full_text_search.git", branch = "setweight", optional = true }
base64 = { version = "0.13" }
tucant_derive = { path = "../backend-rust-derive", optional = true }
file-lock = { version = "2", optional = true }
tracing = "0.1"
opensearch = "2"
rand = "0.8"
tucant_derive_lib = { path = "../backend-rust-derive-lib" }
diesel_migrations = "2"
async-recursion = "1"
selectors = "0.22"

[features]
default = ["server"]
server = ["reqwest",
"tokio",
"html5ever",
"scraper",
"ego-tree",
"futures",
"diesel",
"diesel-async",
"dotenvy",
"anyhow",
"regex",
"futures-util",
"serde_json",
"async-stream",
"deadpool",
"url",
"log",
"env_logger",
"derive_more",
"itertools",
"either",
"once_cell",
"diesel_full_text_search",
"tucant_derive",
"file-lock"]
