# SPDX-FileCopyrightText: The tucant Contributors
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "tucant"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = [ "Moritz Hedtke <Moritz.Hedtke@t-online.de>" ]
description = "A nicer, faster and more featureful frontend to TUCaN"
default-run = "server"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mohe2015/tucant"
keywords = ["tucan"]
categories = ["accessibility", "api-bindings", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest                 = { default-features = false, features = ["cookies"], version = "0.11" }
tokio                   = { default-features = false, features = [ "fs" ], version = "1", optional = true }
scraper                 = { default-features = false, version = "0.15", optional = true }
ego-tree                = { default-features = false, version = "0.6", optional = true }
futures                 = { default-features = false, version = "0.3", optional = true }
diesel                  = { default-features = false, version = "2", features = [ "postgres", "chrono", "32-column-tables" ], optional = true }
diesel-async            = { default-features = false, git = "https://github.com/weiznich/diesel_async", features = ["postgres", "deadpool"], optional = true }
dotenvy                 = { default-features = false, version = "0.15", optional = true }
anyhow                  = { default-features = false, features = [ "std" ], version = "1", optional = true }
regex                   = { default-features = false, features = [ "std" ], version = "1", optional = true}
axum                    = { default-features = false, features = [ "json", "query", "macros", "tokio" ], version = "0.6" }
axum-extra              = { default-features = false, version = "0.7", features = [ "cookie", "cookie-private" ] }
tower-http              = { default-features = false, version = "0.4", features = [ "cors" ] }
serde                   = { default-features = false, version = "1", features = [ "alloc", "std", "derive" ] }
serde_json              = { default-features = false, features = [ "default", "raw_value" ], version = "1", optional = true }
async-stream            = { default-features = false, git = "https://github.com/SabrinaJewson/async-stream.rs", rev = "1a43900aad6d8fd26653f084356420a5963f740a", optional = true }
chrono                  = { default-features = false, version = "0.4", features = ["serde"] }
deadpool                = { default-features = false, version = "0.9", optional = true }
url                     = { default-features = false, version = "2", optional = true }
log                     = { default-features = false, version = "0.4", optional = true }
env_logger              = { default-features = false, version = "0.10", optional = true }
derive_more             = { default-features = false, version = "0.99", optional = true }
itertools               = { default-features = false, features = [ "use_std" ], version = "0.10", optional = true }
either                  = { default-features = false, version = "1", optional = true }
once_cell               = { default-features = false, version = "1", optional = true }
diesel_full_text_search = { default-features = false, path = "../../diesel_full_text_search", optional = true }
base64                  = { default-features = false, version = "0.21" }
tucant_derive           = { default-features = false, path = "../backend-rust-derive", optional = true }
file-lock               = { default-features = false, version = "2", optional = true }
tracing                 = { default-features = false, version = "0.1" }
opensearch              = { default-features = false, features = [ "rustls-tls" ], version = "2" }
rand                    = { default-features = false, features = [ "default", "small_rng" ], version = "0.8" }
tucant_derive_lib       = { default-features = false, path = "../backend-rust-derive-lib" }
diesel_migrations       = { default-features = false, version = "2" }
async-recursion         = { default-features = false, version = "1" }

[features]
default = ["server"]
server = [
"tokio",
"scraper",
"ego-tree",
"futures",
"diesel",
"diesel-async",
"dotenvy",
"anyhow",
"regex",
"serde_json",
"async-stream",
"deadpool",
"url",
"log",
"env_logger",
"derive_more",
"itertools",
"either",
"once_cell",
"diesel_full_text_search",
"tucant_derive",
"file-lock"]
