[package]
name = "debug-adapter-protocol-macro-impl"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = [ "Moritz Hedtke <Moritz.Hedtke@t-online.de>" ]
description = "A nicer, faster and more featureful frontend to TUCaN"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mohe2015/tucant"
keywords = ["tucan"]
categories = ["accessibility", "api-bindings", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn         = { default-features = false, features = [ "parsing", "printing", "extra-traits" ], version = "2" }
proc-macro2 = { default-features = false, version = "1" }
quote       = { default-features = false, version = "1" }
itertools   = { default-features = false, features = [ "use_std" ], version = "0.10" }
heck        = { default-features = false, version = "0.4" }
