[package]
name = "debug-adapter-protocol"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = [ "Moritz Hedtke <Moritz.Hedtke@t-online.de>" ]
description = "A nicer, faster and more featureful frontend to TUCaN"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mohe2015/tucant"
keywords = ["tucan"]
categories = ["accessibility", "api-bindings", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
out-dir-include = { path = "../out-dir-include" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
debug-adapter-protocol-macro-impl = { path = "../debug-adapter-protocol-macro-impl" }
prettyplease = "0.1"
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
