[package]
name = "debug-adapter-protocol"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = [ "Moritz Hedtke <Moritz.Hedtke@t-online.de>" ]
description = "A nicer, faster and more featureful frontend to TUCaN"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mohe2015/tucant"
keywords = ["tucan"]
categories = ["accessibility", "api-bindings", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
out-dir-include = { default-features = false, path = "../out-dir-include" }
async-trait     = { default-features = false, version = "0.1" }
tokio           = { default-features = false, version = "1", features = ["full"] }
anyhow          = { default-features = false, version = "1", features = ["backtrace"] }
futures-util    = { default-features = false, version = "0.3" }
clap            = { default-features = false, version = "4", features = ["derive"] }
json-rpc-server = { default-features = false, path = "../json-rpc-server" }
serde_json      = { default-features = false, version = "1" }
serde           = { default-features = false, version = "1", features = ["derive"] }

[build-dependencies]
debug-adapter-protocol-macro-impl = { default-features = false, path = "../debug-adapter-protocol-macro-impl" }
prettyplease                      = { default-features = false, version = "0.1" }
syn                               = { default-features = false, version = "1", features = ["full", "extra-traits"] }
proc-macro2                       = { default-features = false, version = "1", features = ["span-locations"] }
