[package]
name = "debug-adapter-protocol"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = [ "Moritz Hedtke <Moritz.Hedtke@t-online.de>" ]
description = "A nicer, faster and more featureful frontend to TUCaN"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mohe2015/tucant"
keywords = ["tucan"]
categories = ["accessibility", "api-bindings", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
out-dir-include = { default-features = false, path = "../out-dir-include" }
async-trait     = { default-features = false, version = "0.1" }
tokio           = { default-features = false, version = "1" }
anyhow          = { default-features = false, version = "1" }
futures-util    = { default-features = false, version = "0.3" }
json-rpc-server = { default-features = false, path = "../json-rpc-server" }
serde_json      = { default-features = false, features = [ "default", "raw_value" ], version = "1" }
serde           = { default-features = false, features = [ "alloc", "std", "derive" ], version = "1" }

[build-dependencies]
debug-adapter-protocol-macro-impl = { default-features = false, path = "../debug-adapter-protocol-macro-impl" }
prettyplease                      = { default-features = false, version = "0.1" }
syn                               = { default-features = false, version = "1" }
proc-macro2                       = { default-features = false, version = "1" }
