[package]
name = "debug_adapter_protocol_macro_impl"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn         = { default-features = false, features = [ "parsing", "printing", "extra-traits" ], version = "2" }
proc-macro2 = { default-features = false, version = "1" }
quote       = { default-features = false, version = "1" }
itertools   = { default-features = false, features = ["use_std"], version = "0.13" }
heck        = { default-features = false, version = "0.5" }
