[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/mohe2015/tucant"
description = "A nicer, faster and more featureful frontend to TUCaN"
license = "AGPL-3.0-or-later"
keywords = ["tucan"]
categories = ["accessibility", "api-bindings", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr", "tokio"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
gloo-net = "0.2"
tucant = { path = "../backend-rust", default-features = false }