[package]
name = "trunk-template"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew        = { default-features = false, git = "https://github.com/yewstack/yew/" }
yew-router = { default-features = false, git = "https://github.com/yewstack/yew.git" }
gloo-net   = { default-features = false, version = "0.2" }
tucant     = { default-features = false, workspace = true }