[package]
name = "json-rpc-server"
version = "0.1.0"
edition = "2021"
description = "A nicer, faster and more featureful frontend to TUCaN"
license = "AGPL-3.0-or-later"
repository = "https://github.com/mohe2015/tucant"
readme = "README.md"
keywords = ["tucan"]
categories = ["accessibility", "api-bindings", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1", features = ["backtrace"] }
tokio-tungstenite = "0.18"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures-util = "0.3"
itertools = "0.10"
async-trait = "0.1"
