[package]
name = "json_rpc_server"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap              = { default-features = false, features = [ "std", "derive" ], version = "4" }
tokio             = { default-features = false, features = [ "io-std", "net", "rt" ], version = "1" }
anyhow            = { default-features = false, features = [ "std" ], version = "1" }
tokio-util        = { default-features = false, version = "0.7", features = ["codec"] }
bytes             = { default-features = false, version = "1" }
futures-util      = { default-features = false, features = [ "sink" ], version = "0.3" }
itertools         = { default-features = false, features = ["use_std"], version = "0.13" }
async-trait       = { default-features = false, version = "0.1" }
