[package]
name = "out-dir-include"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = { default-features = false, version = "1" }
syn   = { default-features = false, features = [ "parsing", "proc-macro" ], version = "2" }
