[package]
name = "tucan-connector"
license.workspace = true
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
reqwest = { default-features = false, version = "0.12", features = ["rustls-tls", "charset", "stream"] }
tokio = { default-features = false, version = "1", features = ["rt-multi-thread"] }
thiserror = { default-features = false, version = "1" }
futures-core = "0.3"
bytes = "1"
futures-util = { version = "0.3", features = ["io"] }
tokio-util = "0.7"
scraper = { version = "0.20", features = ["deterministic"] }
ego-tree = "0.6"
sha3 = "0.10.8"
data-encoding = "2.6.0"
html-extractor = { path = "../html-extractor" }