[package]
name = "tucan-connector"
license.workspace = true
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
reqwest = { default-features = false, version = "0.12", features = ["rustls-tls", "charset", "stream"] }
tokio = { default-features = false, version = "1" }
thiserror = { default-features = false, version = "1" }
futures-core = "0.3"
bytes = "1"
futures-util = { version = "0.3", features = ["io"] }
tokio-util = "0.7"
scraper = { version = "0.20", features = ["deterministic"] }
ego-tree = "0.6"
sha3 = "0.10"
data-encoding = "2"
html-extractor = { path = "../html-extractor" }
dotenvy = "0.15"
regex = "1.11"
itertools = "0.13"
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest-middleware = "0.3"
reqwest-retry = "0.6"