[package]
name = "tucan-connector"
license.workspace = true
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "stream"] }
tokio = { version = "1", features = ["rt", "macros"] }
thiserror = "2"
futures-core = "0.3"
bytes = "1"
futures-util = { version = "0.3", features = ["io"] }
tokio-util = "0.7"
scraper = { version = "0.22", features = ["deterministic"] }
ego-tree = "0.10"
sha3 = "0.10"
data-encoding = "2"
html-extractor = { path = "../html-extractor" }
dotenvy = "0.15"
regex = { version = "1" }
itertools = "0.13"
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
key-value-database = { path = "../key-value-database" }
utoipa = "5.3.0"
axum-core = "0.4.5"
tucant-types = { path = "../tucant-types" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
