[package]
name = "tucan-injector"
license.workspace = true
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
tucan-connector = { path = "../tucan-connector" }
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlDocument", "NodeList", "HtmlCollection"] }
cookie = "0.18"
url = "2"
console_log = { version = "1", features = ["color"] }
log = "0.4"
console_error_panic_hook = "0.1"
gloo-history = "0.2"
serde = { version = "1", features = ["derive"] }
indexed-db = "0.4.1"
serde-wasm-bindgen = "0.6"
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.15", features = ["csr"] }

[lints]
workspace = true
