[package]
name = "tucan-injector"
license.workspace = true
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlDocument", "NodeList"] }
console_log = { version = "1", features = ["color"] }
wasm-bindgen = "0.2"
log = "0.4"
console_error_panic_hook = "0.1"
url = "2"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
tucant-yew = { path = "../tucant-yew", features = ["direct"] }

[lints]
workspace = true
