[package]
name = "tucant-api"
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
utoipa = "5.3.0"
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
