[package]
name = "tucant-api"
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
axum = "0.7.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
utoipa = "5.3.0"
serde = { version = "1.0", features = ["derive"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
tucan-connector = { version = "0.0.0", path = "../tucan-connector" }

[lints]
workspace = true
