[package]
name = "tucant-api"
license.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
utoipa = "5.3.0"
serde = { version = "1.0", features = ["derive"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
tucan-connector = { version = "0.0.0", path = "../tucan-connector" }
utoipa-axum = "0.1.3"
tucant-types = { version = "0.0.0", path = "../tucant-types" }
axum-extra = { version = "0.9.6", features = ["cookie"]}
serde_json = "1.0.133"

[lints]
workspace = true
